ENH: Fixed width of search bar to 120px, 20% looks strange on smaller screens.

--- a/topobank/static/css/project.css
+++ b/topobank/static/css/project.css
@@ -195,7 +195,7 @@ td.ellipsis {
 
 /** Animate search bar */
 #global-search {
-  width: 20%;
+  width: 120px;
   -webkit-transition: width 0.4s ease-in-out;
   transition: width 0.4s ease-in-out;
 }
